<resources>

    <string name="app_name">TSB_KUDEAPP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TSB Komertziala</string>
    <string name="nav_header_subtitle">komertziala@tsb.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Konfigurazioa</string>

    <string name="menu_salmenta">Salmentak</string>
    <string name="menu_stock">Stock</string>
    <string name="menu_crm">CRM</string>
    <string name="menu_grafikoa">Grafikak</string>
    <string name="menu_mezua">Hornitzaileak</string>

    <string name="menu_izena">TSB Komertziala</string>

</resources>