<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_salmenta">

    <fragment
        android:id="@+id/nav_salmenta"
        android:name="com.example.tsb_kudeapp.ui.salmentak.SalmentaFragment"
        android:label="@string/menu_salmenta"
        tools:layout="@layout/fragment_salmenta" />

    <fragment
        android:id="@+id/nav_stock"
        android:name="com.example.tsb_kudeapp.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />

    <fragment
        android:id="@+id/nav_crm"
        android:name="com.example.tsb_kudeapp.ui.CRM.CRMFragment"
        android:label="@string/menu_crm"
        tools:layout="@layout/fragment_crm" />

    <fragment
        android:id="@+id/nav_grafika"
        android:name="com.example.tsb_kudeapp.ui.grafikak.GrafikaFragment"
        android:label="@string/menu_grafikoa"
        tools:layout="@layout/fragment_grafikoa"/>

    <fragment
        android:id="@+id/nav_mezua"
        android:name="com.example.tsb_kudeapp.ui.hornitzaileak.HornitzaileakFragment"
        android:label="@string/menu_mezua"
        tools:layout="@layout/fragment_hornitzaileak"/>

</navigation>